# rl-algo-impls

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  benchmark_publish.py  colab_enjoy.ipynb  colab_requirements.txt  colab_train.ipynb  compare_runs.py  download_model.py  enjoy.py  environment.yml  huggingface_publish.py  linear_probe_train.py  lux.py  main.py  optimize.py  pyproject.toml  selfplay_enjoy.py  train.py
a2c/: a2c.py  optimize.py
benchmarks/: benchmark_test.sh  colab_atari.sh  colab_atari1.sh  colab_atari2.sh  colab_basic.sh  colab_benchmark.ipynb  colab_carracing.sh  colab_pybullet.sh  train_loop.sh
colab/: colab_atari1.sh  colab_atari2.sh  colab_basic.sh  colab_benchmark.ipynb  colab_carracing.sh  colab_enjoy.ipynb  colab_mujoco.sh  colab_pybullet.sh  colab_train.ipynb
debug/: accelerate_mnist.py  debug_accelerate.py  dist_accelerate.py  mnist_accelerate.py  multiprocessing_ray.py  ray_actors.py  ray_multiprocessing.py  ray_object_ref.py
docs/: README.md
docs/microrts/: README.md
dqn/: dqn.py  policy.py  q_net.py
hf-deep-rl/: dqn_SpaceInvadersNoFrameskip_v4.ipynb
hyperparams/: a2c.yml  dqn.yml  ppo.yml  vpg.yml
lambda_labs/: benchmark.sh  impala_atari_benchmark.sh  lambda_requirements.txt  procgen_benchmark.sh  setup.sh  starpilot_hard_benchmark.sh
lux_models/acbc-LuxAI_S2-v0-squnet-Tigga-S1/: model.pth
lux_models/acbc-LuxAI_S2-v0-squnet-flg-S1-best/: model.pth
lux_models/acbc-LuxAI_S2-v0-squnet-iDeimos-S1/: model.pth
lux_models/acbc-LuxAI_S2-v0-squnet-iDeimos-S1-best/: model.pth
lux_models/acbc-LuxAI_S2-v0-squnet-ry-andy-S1/: model.pth
lux_models/ppo-LuxAI_S2-v-j512env64-80m-lr10-ft32-2building-S1-best/: model.pth  norm_reward.npz
lux_models/ppo-LuxAI_S2-v0-j1024env32-80m-lr20-2building-S1/: model.pth  norm_reward.npz
lux_models/ppo-LuxAI_S2-v0-j1024env32-80m-vfc006-mgn4-fine-tune-a100-S1-best/: model.pth  norm_reward.npz-emmv.npz  norm_reward.npz-rms.npz
lux_models/ppo-LuxAI_S2-v0-j512env64-80m-a100-lr20-finetune-S1-best/: model.pth  norm_reward.npz
lux_models/ppo-LuxAI_S2-v0-j512env64-80m-a100-lr5-ft32-2heavy-S1-best/: model.pth  norm_reward.npz
lux_models/ppo-LuxAI_S2-v0-j512env64-80m-lr5-ft32-2building-S1-best/: model.pth  norm_reward.npz
lux_models/ppo-LuxAI_S2-v0-j512env64-80m-lr5-ft32-2o3m4h-S1-best/: model.pth  norm_reward.npz
mech_interp/: README.md  linear_probe_train.py  occupancy_linear_probe_trainer.py
papers/cog2024/: cog2024.bib  cog2024.tex  cog2024_anonymization.sty  cog2024_combined.tex  cog2024_supplemental.bib  cog2024_supplemental.tex  cog_anonymization.sty  conference_101719.tex
papers/iclr2024/: fancyhdr.sty  iclr2024.bib  iclr2024.tex  iclr2024_anonymization.sty  iclr2024_conference.bib  iclr2024_conference.sty  iclr2024_conference.tex  iclr2024_response.md
papers/scripts/: remote_letter_box.py
ppo/: policy.py  ppo.py
publish/: markdown_format.py
rai_microrts_saved_models/acbc-Microrts-squnet-d16-128-iMayari-map32-S1/: model.pth
rai_microrts_saved_models/acbc-Microrts-squnet-d16-128-iMayari-map64-from32-S1/: model.pth
rai_microrts_saved_models/acbc-Microrts-squnet-d16-128-iMayari-nondeterministic-S1/: model.pth
rai_microrts_saved_models/ppo-Microrts-A10-finetuned-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-A6000-finetuned-coac-mayari-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-finetuned-DistantResources-shaped-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-finetuned-DoubleGame-shaped-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-finetuned-NoWhereToRun-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-selfplay-dc-phases-A10-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-DistantResources-128ch-finetuned-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-d16-128-BC-finetune-S1/: model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-d16-128-map32-BC-finetune-A10-S1/: model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-d16-128-map64-BC-finetune-A10-S1/: model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-map32-128ch-selfplay-S1-best/: fix_state_dict.py  model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-map64-128ch-selfplay-S1-best/: model.pth
rai_microrts_saved_models/ppo-Microrts-squnet-map64-64ch-selfplay-S1-best/: model.pth
rl_algo_impls/: benchmark_publish.py  compare_runs.py  download_model.py  enjoy.py  huggingface_publish.py  onxx_export.py  optimize.py  selfplay_enjoy.py  train.py
rl_algo_impls/a2c/: a2c.py  optimize.py  (+1 more)
runner/: config.py  env.py  evaluate.py  names.py  running_utils.py  train.py
saved_models/: dqn-Acrobot-v1-best.pt  dqn-Acrobot-v1.pt  dqn-CartPole-v0-best.pt  dqn-CartPole-v0.pt  dqn-CartPole-v1-best.pt  dqn-CartPole-v1.pt  dqn-LunarLander-v2-best.pt  dqn-LunarLander-v2.pt  dqn-MountainCar-v0-best.pt  dqn-MountainCar-v0.pt  log.yml
scripts/: appo_benchmark.sh  benchmark.sh  final_hyperparams.py  loop_benchmark.sh  lux.sh  microrts.sh  setup-lux.sh  setup.sh  tags_benchmark.sh  train_loop.sh  tuning.sh
shared/: algorithm.py  feature_extractor.py  gae.py  module.py  policy.py  running_utils.py  schedule.py  stats.py  trajectory.py  utils.py
tuning/: optimize_env.py  tuning.sh
videos/: ppo-CartPole-v1-S1-25000.meta.json  ppo-CartPole-v1-S1-50000.meta.json  ppo-CartPole-v1-S1-75000.meta.json  ppo-LunarLander-v2-S1-1000000.meta.json  ppo-LunarLander-v2-S1-250000.meta.json  ppo-LunarLander-v2-S1-500000.meta.json  ppo-LunarLander-v2-S1-750000.meta.json  ppo-MountainCar-v0-S1-0.meta.json  ppo-MountainCar-v0-S1-250000.meta.json  ppo-MountainCar-v0-S1-500000.meta.json  ppo-MountainCar-v0-S1-750000.meta.json
vpg/: policy.py  vpg.py
wrappers/: atari_wrappers.py  episode_record_video.py  episode_stats_writer.py  get_rgb_observation.py  initial_step_offset_wrapper.py  initial_step_truncate_wrapper.py  is_vector_env.py  no_reward_timeout.py  noop_env_seed.py  normalize.py  sync_vector_env_render_compat.py  transpose_image_observation.py  vec_episode_recorder.py  vec_single_recorder.py  video_compat_wrapper.py
(+456 files in other folders)
