[project]
name = "rl_algo_impls"
version = "0.0.16"
description = "Implementations of reinforcement learning algorithms"
authors = [
    {name = "Scott Goodfriend", email = "goodfriend.scott@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy >= 1.23.5, < 1.24",
    "torch",
    "torchvision",
    "tensorboard >= 2.11.2, < 2.12",
    "stable-baselines3 >= 1.7.0, < 1.8",
    "gym >= 0.21.0, < 0.22",
    "wandb == 0.13.10",
    "pyvirtualdisplay",
    "PyYAML",
]

[tool.setuptools]
packages = ["rl_algo_impls", "rai_microrts_saved_models"]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "mypy",
    "flake8",
    "flake8-bugbear",
    "isort",
]
extra = [
    "cmake",
    "swig",
    "stable-baselines3[extra] >= 1.7.0, < 1.8",
    "gym[box2d] >= 0.21.0, < 0.22",
    "AutoROM.accept-rom-license >= 0.6",
    "pyglet == 1.5.27",
    "pybullet",
    "scikit-learn",
    "matplotlib >= 3.7.1",
    "tabulate",
    "huggingface-hub",
]
optuna = [
    "optuna",
    "dash",
    "kaleido",
]
procgen = [
    "numexpr >= 2.8.4",
    "gym3",
    "glfw >= 1.12.0, < 1.13",
    "procgen; platform_machine=='x86_64'",
]
microrts-ppo = [
    "numpy < 1.24.0", # Support for gym-microrts < 0.6.0
    "gym-microrts == 0.2.0", # Match ppo-implementation-details
]
microrts-paper = [
    "numpy < 1.24.0", # Support for gym-microrts < 0.6.0
    "gym-microrts == 0.3.2",
]
microrts = [
    "gym-microrts @ https://github.com/sgoodfriend/MicroRTS-Py/releases/download/v0.6.2-alpha.1/gym_microrts-0.6.2a1-py3-none-any.whl",
]
jupyter = [
    "jupyter",
    "notebook"
]
lux = [
    "luxai_s2",
    "juxai-s2"
]
all = [
    "rl-algo-impls[test]",
    "rl-algo-impls[extra]",
    "rl-algo-impls[dependencies]",
    "rl-algo-impls[procgen]",
    "rl-algo-impls[microrts]",
    "rl-algo-impls[lux]",
]

[project.urls]
"Homepage" = "https://github.com/sgoodfriend/rl-algo-impls"

[build-system]
requires = ["setuptools==65.5.0", "setuptools-scm", "wheel==0.38.4"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black" 

[project.scripts]
rai_microrts = "rl_algo_impls.microrts.agent:main"