[tool.poetry]
name = "rl_algo_impls"
version = "0.2.1"
description = "Implementations of reinforcement learning algorithms"
authors = ["Scott Goodfriend <goodfriend.scott@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sgoodfriend/rl-algo-impls"
repository = "https://github.com/sgoodfriend/rl-algo-impls"
keywords = ["reinforcement", "machine", "learning", "microRTS", "LuxS2"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "rl_algo_impls" },
    { include = "rai_microrts_saved_models", format = ["sdist", "wheel"] }
]

[tool.poetry.package-data]
"rai_microrts_saved_models" = ["**/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "*"
torch = "*"
torchvision = ">=0.18.0"
tensorboard = "*"
stable-baselines3 = {extras = ["extra"], version = "^2.1.0"}
gymnasium = {extras = ["box2d", "mujoco"], version = "^0.29.1"}
wandb = "*"
pyvirtualdisplay = "*"
psutil = "*"
PyYAML = "*"
moviepy = "*"
tqdm = "*"
GPUtil = "*"
ray = {extras = ["air"], version = "^2.8.1"}
accelerate = "*"
einops = "*"

AutoROM = {extras = ["accept-rom-license"], version = "^0.6", optional = true}
pyglet = {version = "==1.5.27", optional = true}
scikit-learn = {version = "*", optional = true}
matplotlib = {version = "^3.7.1", optional = true}
huggingface-hub = {version = "*", optional = true}
glfw = {version = "^1.12.0", optional = true}
JPype1 = {version = "^1.3.0", optional = true}
peewee = {version = "^3.14.8", optional = true}
PettingZoo = {version = "^1.16.0", optional = true}
luxai_s2 = {version = "^3.0.1", optional = true}
typing_extensions = {version = "^4.5.0", optional = true}

vec-noise = {version = "*", optional = true}  # for luxai_s2, but poetry fails for pep517. Install before `-E lux`
juxai-s2 = { git = "https://github.com/sgoodfriend/jux.git", branch = "main", optional = true }
batchrenorm = { git = "https://github.com/sgoodfriend/batchrenorm.git", branch = "master", optional = true }

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
mypy = "*"
flake8 = "*"
flake8-bugbear = "*"
isort = "*"

[tool.poetry.extras]
extra = ["cmake", "swig", "AutoROM", "pyglet", "scikit-learn", "matplotlib", "huggingface-hub", "pandas", "torchviz", "thop", "onnx", "glfw", "mujoco"]
microrts = ["JPype1", "peewee", "PettingZoo"]

lux = ["luxai_s2", "ray", "kaggle", "polars", "typing_extensions", "juxai-s2", "batchrenorm"]

[tool.poetry.scripts]
rai_microrts = "rl_algo_impls.microrts.agent:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
